--- a/src/css/main.css
+++ b/src/css/main.css
@@ -21,54 +21,68 @@ header {
     width: 100%;
     height: 75px;
     text-align: center;
-}
 
-nav {
-    padding-top: 1.5rem;
-}
-
-nav ul {
-    display: flex;
-    justify-content: space-evenly;
-}
-
-nav ul li {
-    display: inline;
-}
-
-nav ul li a {
-    text-decoration: none;
-    text-shadow: 2px 2px 2px #000000;
-
-    &:hover {
-        text-decoration: underline;
+    /* Navigering. */
+    nav {
+        padding-top: 1.5rem;
     }
 
-    &:visited {
-        color: #ffffff;
+    nav ul {
+        display: flex;
+        justify-content: space-evenly;
     }
-}
 
-.currentPage {
-    background-color: #f2f0f3;
-    color: #000000;
-    font-weight: bold;
-    padding: 2rem 1.5rem 2rem 1.5rem;
-    text-shadow: 1.5px 1.5px 3px #ffffff;
+    nav ul li {
+        display: inline;
+    }
 
-    &:visited {
+    nav ul li a {
+        text-decoration: none;
+
+        &:hover {
+            text-decoration: underline;
+        }
+
+        &:visited {
+            color: #ffffff;
+        }
+    }
+
+    /* Aktiv sida. */
+    .currentPage {
+        background-color: #f2f0f3;
         color: #000000;
+        font-weight: bold;
+        padding: 2rem 1.5rem 2rem 1.5rem;
+
+        &:visited {
+            color: #000000;
+        }
+
+        .fa-solid {
+            color: #000000;
+            padding-left: 5px;
+        }
     }
 
+    /* Ikon. */
     .fa-solid {
-        color: #000000;
+        color: #ffffff;
         padding-left: 5px;
     }
 }
 
-.fa-solid {
-    color: #ffffff;
-    padding-left: 5px;
+/* Rubriker och brödtext. */
+h1 {
+    text-align: center;
+    margin: 3rem 0.5rem 0 0.5rem;
+    text-shadow: 2px 2px 3px #ffffff;
+}
+
+h2 {
+    margin: 0 0 2rem 3rem;
+    font-weight: bold;
+    color: #362d29;
 }
 
 p {
@@ -77,34 +91,44 @@ p {
     line-height: 1.6;
 }
 
+/* REGISTRERING. */
+
 .form-container {
-    display: flex;
-    justify-content: center;
-}
+    text-align: center;
 
-#login, #register {
-    font-weight: bold;
-
-    input {
-        height: 1.5rem;
-        border-radius: 2px;
-    }
-
-    button {
-        background-color: #577e6c;
-        color: #ffffff;
-        font-size: 16px;
+    #login,
+    #register {
         font-weight: bold;
-        padding: 5px 10px;
-        border-radius: 2px;
-        cursor: pointer;
 
-        &:hover {
-            background-color: #e6e668;
-            color: black;
+        input {
+            height: 1.5rem;
+            border-radius: 2px;
+        }
+
+        p {
+            color: #dc0303;
+            margin: 1rem 0;
+        }
+
+        button {
+            background-color: #577e6c;
+            color: #ffffff;
+            font-size: 16px;
+            font-weight: bold;
+            padding: 5px 10px;
+            border-radius: 2px;
+            cursor: pointer;
+            margin-top: 1rem;
+
+            &:hover {
+                background-color: #e6e668;
+                color: black;
+            }
         }
     }
 }
+
+/* MIN SIDA. */
 
 .logout {
     display: flex;
@@ -127,20 +151,6 @@ p {
     }
 }
 
-
-/* Rubriker. */
-h1 {
-    text-align: center;
-    margin: 3rem 0.5rem 0 0.5rem;
-    text-shadow: 2px 2px 3px #ffffff;
-}
-
-h2 {
-    margin: 0 0 2rem 3rem;
-    font-weight: bold;
-    color: #362d29;
-}
-
 .img-container {
     display: flex;
     justify-content: center;
@@ -153,29 +163,32 @@ h2 {
     }
 }
 
-
+/* Mediaquery för större skärmar. */
 @media (min-width: 426px) {
 
-    nav ul {
-        display: flex;
-        justify-content: center;
-    }
+    header {
 
-    nav ul li {
-        display: inline;
-        padding: 0 3rem 0 3rem;
-    }
+        nav ul {
+            display: flex;
+            justify-content: center;
+        }
 
-    nav ul li a {
-        font-size: 20px;
-        text-decoration: none;
+        nav ul li {
+            display: inline;
+            padding: 0 3rem 0 3rem;
+        }
+
+        nav ul li a {
+            font-size: 20px;
+            text-decoration: none;
+        }
     }
 
     .img-container {
         display: flex;
         justify-content: center;
         margin: 0 5rem;
-    
+
         img {
             height: 100%;
             width: 100%;
